updates made whilst doing handover tidying and preping for final ur test

--- a/app/views/index-v3.html
+++ b/app/views/index-v3.html
@@ -45,8 +45,9 @@ Waste carrier prototype
           </h3>
 
           <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="/{{versionxxx}}/upper-tier-renewal">Renewal payment receipt, from check your answers (preferred)</a></li>
-           <li><a href="/{{versionxxx}}/worldpay-payment-flow">Renewal Worldpay (only) from choose payment page (in budget/capacity)</a></li>
+            <li><a href="/{{versionxxx}}/wcr-magic-link/email-renew">Magic link email</a></li>
+            <li><a href="/{{versionxxx}}/upper-tier-renewal">Renewal payment receipt, from check your answers</a></li>
+           <li><a href="/{{versionxxx}}/worldpay-payment-flow">Renewal Worldpay (only) from choose payment page</a></li>
           </ul>
           
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
