--- a/app/views/v3/your-registration/pay/choose-payment.html
+++ b/app/views/v3/your-registration/pay/choose-payment.html
@@ -82,6 +82,45 @@ Payment summary
       </table>
       {% endif %}
 
+      {% if permit.worldpay=="payment" %}	
+      <div class="govuk-form-group">	
+        <fieldset class="govuk-fieldset">	
+
+          <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">	
+            <div class="govuk-radios__item">	
+              <input class="govuk-radios__input" id="choose-payment-conditional" name="choose-payment" type="radio" value="worldpay" data-aria-controls="conditional-choose-payment-conditional">	
+              <label class="govuk-label govuk-radios__label" for="choose-payment-conditional">	
+                Pay by credit or debit card</br>	
+                <span class="govuk-hint">You will be transferred to the secure WorldPay site. We accept MasterCard, Maestro and Visa.</span>	
+              </label>	
+            </div>	
+            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-choose-payment-conditional" style="padding-bottom:60px;padding-top:10px;font-weight: bold;">	
+              <div class="govuk-form-group">	
+                <label class="govuk-label" for="receipt-email">	
+                  <h3 govuk-heading-m>Where should the card payment confirmation be sent?</h3>	
+                  <p>WorldPay will send a card payment confirmation to this address, once the payment has been processed.</p>	
+                    Email address	
+                </label>	
+                <input class="govuk-input govuk-!-width-one-half" id="receiptEmail" name="receiptEmail" value="{{permit.contactEmail}}">	
+
+
+              </br>	
+
+              </div>	
+
+            </div>	
+
+            <div class="govuk-radios__item">	
+              <input class="govuk-radios__input" id="choose-payment-conditional-2" name="choose-payment" type="radio" value="bacs" data-aria-controls="conditional-choose-payment-conditional-2">	
+              <label class="govuk-label govuk-radios__label" for="choose-payment-conditional-2">	
+                Pay by bank transfer and then email us to confirm payment</br>	
+                <span class="govuk-hint">We cannot register you until your payment clears, and you will not get a payment confirmation.</span>	
+              </label>	
+          </div>	
+        </fieldset>	
+      </div>	
+
+      {% else %}
       
     <div class="govuk-form-group">
 <h3 class="govuk-heading-s">Make a payment</h3>
@@ -116,7 +155,7 @@ items: [
 
 </div>
 
-
+{% endif %}
 
     <div class="govuk-form-group">
       {{ govukButton({
