updating tidied up index page

--- a/app/views/index-v3.html
+++ b/app/views/index-v3.html
@@ -35,7 +35,26 @@ Waste carrier prototype
 
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <!-- ########################################################################### -->
-      
+            <h2 class="govuk-heading-m">
+              Main prototyped journeys
+            </h2>
+            <h3 class="govuk-heading-s">
+              Registration
+            </h3>
+          <ul class="govuk-list govuk-list--bullet"> 
+            <li><a href="/{{versionxxx}}/your-registration/start-page ">Registration from the start page</a></li>
+          </ul>
+          <h3 class="govuk-heading-s">
+            Renewal
+          </h3>
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a href="/{{versionxxx}}/v3/magic ">From email</a></li>
+            <li><a href="/{{versionxxx}}/your-registration/start-page ">From start page with renewal number (this was tested and proved successful but out of budget)</a></li>
+            <li><a href="/{{versionxxx}}/your-registration/start-page ">From start page using login when no renewal number (this was not tested and is more of an unhappy path option for test)</a></li>
+          </ul>
+            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            <!-- ########################################################################### -->
+           
           <h2 class="govuk-heading-m">
             Current research
           </h2>
@@ -59,7 +78,7 @@ Waste carrier prototype
  
           <ul class="govuk-list govuk-list--bullet"> 
             <li><a href="https://waste-carriers.herokuapp.com/public/images/renewal-letter-v4.pdf" target="_blank" download="Renewal letter check email">Renewal letter</a></li>
-            <li><a href="/{{versionxxx}}/magic" target="_blank">Renewal flow following the letter</a></li>
+            <li><a href="/{{versionxxx}}/magicletter" target="_blank">Renewal flow following the letter</a></li>
           </ul>
         
 
